# Space-Trader

./: .gitignore  README.md  pyproject.toml  renderingdev.py  spacetrader.py  ui_preview.py
.github/workflows/: st-app.yml
docs/: TODO.md
src/: commander.py  constants.py  economy.py  log.py  ui_actions.py  universe.py  utils.py
src/screens/: char_create.py  gamescreens.py  screen_manager.py  screens.py
test/: test_universe.py
