[project]
name = "Space-Trader"
version = "1.2.4"
authors = [
    {name = "RPINerd"}
]
description = "A space trading game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pytest",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Natural Language :: English",
]
keywords = [
    "space",
    "trading",
    "game",
    "palmOS",
    "palm pilot",
    "rogue",
    "space trader",
    "spacetrader",
    "dark void",
    "pygame",
    "rpg",
    "simulation",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "ruff>=0.0.241",
]
[project.urls]
Homepage = "https://github.com/RPINerd/Space-Trader"
Issues = "https://github.com/RPINerd/Space-Trader/issues"

[tool.ruff.lint]
extend-ignore = [
    "ERA001",  # Commented out code
]
